# hrothgar

./: .gitignore  AGENTS.md  README.md  gar_font_investigation_plan.md  generate.py  pyproject.toml  style-transfer.py
Lib/hrothgar/: __init__.py  dataset.py  dataset_constants.py  eagle_loss.py  googlefonts.py  llamagen_cnn.py  render.py  type_helpers.py  utils.py
Lib/hrothgar/ar/: __init__.py  config.py  dataset.py  debug_coreml.py  dit.py  export_coreml.py  export_wrappers.py  ga.py  inference_coreml.py  lora.py  losses.py  maskgit.py  model.py  multimodal.py  nfa.py  style_sampling.py  test_coreml.py  train.py
Lib/hrothgar/gtok/: __init__.py  __main__.py  autocorrelation.py  code_diversity.py  config.py  dataset.py  finetune.py  health.py  interpolate.py  linear_probing.py  llamagen_cnn.py  llamagen_lpips.py  losses.py  model.py  oracle_ar.py  train.py  validator.py  vgg_loss.py
Lib/hrothgar/upscaler/: __init__.py  __main__.py  dataset.py  (+5 more)
beyond-patches/: 00README.json  main.bib  main.tex
beyond-patches/sec/: 0_abstract.tex  1_intro.tex  2_related_works.tex  3_method.tex  4_experiments.tex  5_conclusion.tex  X_suppl.tex
scripts/: visualize_cross_attention.py
tests/: conftest.py  test_adapter_gradient_flow.py  test_ar_dataset.py  test_ar_dataset_integration.py  test_ar_losses.py  test_ar_model.py  test_ar_multimodal.py  test_dataset.py  test_dit.py  test_googlefonts.py  test_googlefonts_dummy_repo.py  test_gtok_dataset.py  test_gtok_finetune.py  test_gtok_losses.py  test_gtok_model.py  test_maskgit.py  test_render.py  test_upscaler_noise_and_loss.py
(+18 files in other folders)
